# Deep-Barcode-Reader

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docker/: entrypoint.sh
src/deep_barcode_reader/: __init__.py  barcode.py  base.py  main.py
tests/: test_deep_barcode_reader.py
